Fixed spacing on buttons so label appears centered

--- a/css/main.css
+++ b/css/main.css
@@ -254,7 +254,7 @@ li {
 
 .button {
   display: inline-block;
-  padding: 0.75em 1.5em;
+  padding: 0.75em 1.5em .875em;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   text-decoration: none;
